cmake_minimum_required(VERSION 3.2)

PROJECT(GHKeyBrowser)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()
ModuleSetWinCompilerFlags()

SET(GHKEYBROWSER2_VERSION_MAJOR "1")
SET(GHKEYBROWSER2_VERSION_MINOR "0")
SET(GHKEYBROWSER2_VERSION_PATCH "1")
SET(GHKEYBROWSER2_VERSION "${GHKEYBROWSER2_VERSION_MAJOR}.${GHKEYBROWSER2_VERSION_MINOR}.${GHKEYBROWSER2_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${GHKEYBROWSER2_VERSION}")

OPTION(USE_GHKEYBROWSER2 "use ghkeybrowser2" OFF)

add_definitions(-D_UNICODE -DUNICODE -D_WINDOWS)
ExeImportWin("src" "")

